--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,8 @@
               "./node_modules/ngx-toastr/toastr-old.css",
               "node_modules/@smart-webcomponents-angular/table/styles/smart.base.css",
               "node_modules/@smart-webcomponents-angular/table/styles/smart.table.css",
-              "node_modules/@smart-webcomponents-angular/table/styles/smart.common.css"
+              "node_modules/@smart-webcomponents-angular/table/styles/smart.common.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             
             ],
             "scripts": []
